Bug 322348 - Removed labels still shows up in column view
Summary: Removed labels still shows up in column view
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: columns mode (other bugs)
Version First Reported In: 2.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-14 13:40 UTC by damien.porquet
Modified: 2013-07-18 15:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description damien.porquet 2013-07-14 13:40:59 UTC
I need to refresh the view to make them disappear.
No problem if I add a label.

Reproducible: Always

Steps to Reproduce:
1. setup dolphin to column view mode
2. add a label to a file
3. remove it
Actual Results:  
removed label still shown 

Expected Results:  
removed label should disappear
Comment 1 Emmanuel Pescosta 2013-07-14 18:18:17 UTC
Thanks for the bug report!

I can reproduce this problem in Dolphin 4.10.90
Comment 2 Emmanuel Pescosta 2013-07-14 19:05:59 UTC
Review Request: https://git.reviewboard.kde.org/r/111505/
Comment 3 Frank Reininghaus 2013-07-14 22:40:57 UTC
Just to be sure that we understand what the problem is, could you try to describe the problem more clearly or provide a screenshot of the bug? The combination of "column view mode", "label" and the component "Information Panel" doesn't make much sense to me.

Emmanuel's patch looks like it makes sense (I'll try to have a closer look tomorrow or on Tuesday), but it doesn't have anything to do with the Information Panel, so I'd prefer to make sure that we don't misunderstand the problem that you are seeing. Thanks for your help!
Comment 4 damien.porquet 2013-07-15 08:33:24 UTC
Thank you for the quick reply (and fix!).
I attached it to the component "panel" since I change tags through this panel, but it should probably go to component "view engine: column mode" instead.
Comment 5 Emmanuel Pescosta 2013-07-18 15:10:29 UTC
Git commit 5b81abea5be6d6d57da7a1ca953f8371b23b6528 by Emmanuel Pescosta.
Committed on 18/07/2013 at 15:07.
Pushed by emmanuelp into branch 'KDE/4.11'.

Overwrite the changed role value with an empty QVariant,
because the nepomuk roles provider doesn't overwrite it when the property
value list is empty.
REVIEW: 111505
FIXED-IN: 4.11.0

M  +10   -2    dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +5    -1    dolphin/src/kitemviews/kfileitemmodelrolesupdater.h
M  +6    -1    dolphin/src/kitemviews/private/knepomukrolesprovider.cpp
M  +2    -0    dolphin/src/kitemviews/private/knepomukrolesprovider.h

http://commits.kde.org/kde-baseapps/5b81abea5be6d6d57da7a1ca953f8371b23b6528