Overwrite the changed role value with an empty QVariant, because the nepomuk roles provider doesn't overwrite it when the property value list is empty.

BUG: 322348
REVIEW: 111505
FIXED-IN: 4.11.0